fixed minor issues on mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ body {
     body {
       background-image: url(../img/bg-mobile.png);
       background-size: cover;
-      background-position: auto; } }
+      background-position: center; } }
 
 .main {
   display: flex; }
