--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -39,6 +39,6 @@ body {
   @media only screen and (max-width: $bp-large) {
     background-image: url(../img/bg-mobile.png);
     background-size: cover;
-    background-position: auto;
+    background-position: center;
   }
 }
